chore: dev, build, lint and typecheck all fine
